<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_newest"
            android:checked="true"
            android:title="@string/menu_newest" />
        <item
            android:id="@+id/action_oldest"
            android:checked="false"
            android:title="@string/menu_oldest" />
        <item
            android:id="@+id/action_random"
            android:checked="false"
            android:title="@string/menu_random" />
    </group>

    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"/>
</menu>